--- a/BackEnd/Documents/Templates/template.html
+++ b/BackEnd/Documents/Templates/template.html
@@ -12,7 +12,7 @@
       <br>
      
       <div style="float: right;">
-        <img src="http://localhost:3000/mb.png" style="margin-right: 26px;" width="340px" height="50px">
+        <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
       </div>
 
       <br><br><br>
