--- a/BackEnd/Documents/Templates/Consumo_de_Gasolina.html
+++ b/BackEnd/Documents/Templates/Consumo_de_Gasolina.html
@@ -82,7 +82,7 @@
 
       <section class="sheet padding-10mm">
         <br>
-        <img style="margin-left: 10px" src="http://localhost:3000/mb.png" width="375" height="65">
+        <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
         <br>
         
         <center><p style="font-family: 'Source Sans Pro', sans-serif; font-weight: bold; font-size: 20px;">Consumo de Diesel &nbsp&nbsp&nbsp&nbsp <span style="">Año: {{this.Año}}</span></p></center>
