--- a/BackEnd/Documents/Templates/Consumo_y_Mantenimiento_de_Empresas.html
+++ b/BackEnd/Documents/Templates/Consumo_y_Mantenimiento_de_Empresas.html
@@ -48,7 +48,7 @@
     <body class="letter">
 
       <section class="sheet padding-10mm">
-      <img style="margin-left: 10px" src="http://localhost:3000/mb.png" width="375" height="65">
+      <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
       <br><br>
       <table class="tabb">
     <tbody>
