--- a/BackEnd/Documents/Templates/PruebasDesempeño.html
+++ b/BackEnd/Documents/Templates/PruebasDesempeño.html
@@ -52,7 +52,7 @@
     <body class="letter landscape">
       <section class="sheet padding-10mm">
 
-      <img style="margin-left: 10px" src="http://localhost:3000/mb.png" width="375" height="65">
+      <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
       
       <table class="tablaFormato">
       <tbody>
