--- a/BackEnd/Documents/Templates/CRTIA.html
+++ b/BackEnd/Documents/Templates/CRTIA.html
@@ -48,7 +48,7 @@
     <body class="landscape">
 
      <section class="sheet padding-10mm">
-      <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
+      <img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
       <div  style="margin-top: 6px; font-family: 'Arial', sans-serif; font-weight: bold; font-size: 20px"><center>CÉDULA DE REVISIÓN TÉCNICA INICIAL DEL AUTOBÚS</center></div>
       {{#each users}}
       <table class="tablaFormato">
