--- a/BackEnd/Documents/Templates/Consumo_y_Mantenimiento_de_Empresas.html
+++ b/BackEnd/Documents/Templates/Consumo_y_Mantenimiento_de_Empresas.html
@@ -48,7 +48,7 @@
     <body class="letter">
 
       <section class="sheet padding-10mm">
-      <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
+      <img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
       <br><br>
       <table class="tabb">
     <tbody>
@@ -92,7 +92,7 @@
 
       </section>
       <section class="sheet padding-10mm">
-      <img style="margin-left: 10px" src="http://localhost:3000/mb.png" width="375" height="65">
+      <img style="margin-left: 10px" src="{{Header.Foto1}}" width="375" height="65">
       <br>
       <center><p style="font-size: 18px; font-family: 'Source Sans Pro', sans-serif; font-weight: bold;">REPORTE MENSUAL DE MANTENIMIENTO PREVENTIVO</p></center>
 
