--- a/BackEnd/Documents/Templates/EstatusPatio.html
+++ b/BackEnd/Documents/Templates/EstatusPatio.html
@@ -57,7 +57,7 @@
 {{#each datos}}
 			<section class="sheet padding-10mm">
 				<br>
-				<img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
+				<img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
 				<br><br><br>
 				<center>
 		
