--- a/BackEnd/Documents/Templates/Kilometraje.html
+++ b/BackEnd/Documents/Templates/Kilometraje.html
@@ -54,7 +54,7 @@
           <section class="sheet padding-10mm">
 
 			<br><br><br>
-      <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
+      <img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
 				<center>
 						<table class="tablaFormato">
 							<tbody align="center">
