--- a/BackEnd/Documents/Templates/template.html
+++ b/BackEnd/Documents/Templates/template.html
@@ -12,7 +12,7 @@
       <br>
      
       <div style="float: right;">
-        <img style="margin-left: 10px" src={{header.Foto1}} width="375" height="65">
+        <img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
       </div>
 
       <br><br><br>
