--- a/BackEnd/Documents/Templates/EstatusPatio.html
+++ b/BackEnd/Documents/Templates/EstatusPatio.html
@@ -54,10 +54,11 @@
 		    }
 		</style>
 		<body class="letter">
+		<img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
 {{#each datos}}
 			<section class="sheet padding-10mm">
 				<br>
-				<img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">
+				<!--<img style="margin-left: 10px" src={{Header.Foto1}} width="375" height="65">-->
 				<br><br><br>
 				<center>
 		
